[project]
name = "raft-stereo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy>=1.24.4",
    "opt-einsum>=3.4.0",
    "scikit-image>=0.26.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "tqdn>=0.2.1",
]
[tool.setuptools]
py-modules = ["core"]
